# messenger

./: .gitignore  README.md  render.yaml
.github/workflows/: keep-alive.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/devin/messenger/: MainActivity.kt
android/app/src/main/java/com/devin/messenger/audio/: VoiceRecorder.kt
android/app/src/main/java/com/devin/messenger/data/: Api.kt  AuthBus.kt  Models.kt  RealtimeBus.kt  SessionStore.kt
android/app/src/main/java/com/devin/messenger/ui/: AppNav.kt
android/app/src/main/java/com/devin/messenger/ui/auth/: AuthScreen.kt
android/app/src/main/java/com/devin/messenger/ui/chat/: ChatScreen.kt
android/app/src/main/java/com/devin/messenger/ui/chatsettings/: ChatSettingsScreen.kt
android/app/src/main/java/com/devin/messenger/ui/components/: Avatar.kt
android/app/src/main/java/com/devin/messenger/ui/createchat/: CreateChatScreen.kt
android/app/src/main/java/com/devin/messenger/ui/home/: HomeScreen.kt
android/app/src/main/java/com/devin/messenger/ui/profile/: ProfileScreen.kt
android/app/src/main/java/com/devin/messenger/ui/search/: SearchScreen.kt
android/app/src/main/java/com/devin/messenger/ui/theme/: Color.kt  Theme.kt
android/app/src/main/java/com/devin/messenger/util/: MediaUtils.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
(+1 files in other folders)
